syntax = "proto3";

package pb;

message UserRequest {
    int32 id = 1 ;
}

message UserResponse {
    repeated User users = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
}

service UserService {
    rpc GetUser (UserRequest) returns (UserResponse) {
    }
    rpc GetUsers (UserRequest) returns (UserResponse) {
    }
}